add_executable(beispiel beispiel.cpp)

add_executable(aufgabe2bis4 aufgabe2bis4.cpp)

add_executable(aufgabe5 aufgabe5.cpp)

#Build aufgabe7
add_executable(aufgabe7 
	aufgabe7.cpp
	vec2.cpp
	circle.cpp)

add_executable(aufgabe9 aufgabe9.cpp)

#Build aufgabe12
add_executable(aufgabe12 
	aufgabe12.cpp
	vec2.cpp
	circle.cpp)





